--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ body {font-family: Arial, Helvetica, sans-serif;
 .flip-card-front, .flip-card-back {
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 120%;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
@@ -66,4 +66,37 @@ body {font-family: Arial, Helvetica, sans-serif;
   background-color: #00674b;
   color: white;
   transform: rotateY(180deg);
+}
+
+#example2 {
+  border: 1px solid;
+  padding: 10px;
+  box-shadow: 5px 10px 18px #888888;
+}
+
+footer {
+  text-align: center;
+  padding: 3px;
+  background-color: #00674b;
+  color: #D0F0C0;
+}  
+
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: #00674b;
+  color: #D0F0C0;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+}
+
+#myBtn:hover {
+  background-color: #555;
 }
